<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="property_in_canberra">Property in Canberra</string>
    <string name="type_in_keywords_and_symbols">type in keywords and symbols…</string>
    <string name="help_info_img">Help info image</string>
    <string name="help_info_title">title</string>
    <string name="help_info_description">description</string>
    <string name="help_info_next">NEXT</string>
    <string name="help_info_start">Go</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="featured_property">Featured Property</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
</resources>